# PyInstaller_GUI

./: .gitignore  PyInstaller_GUI.py  PyInstaller_GUI.pyw  README.md  Resolver_ruta.py  about_PyInstaller.txt  about_PyInstaller_GUI.txt  index.html  index.md  pyproject.toml  requirements.txt
PyInstaller_GUI/: HotsPot.spec  PyInstaller_GUI.pyw
lib/: PGcore.py  VSFILE.py  VSVersionInfo.temp  data.py  depend.py  pg_core.py  pygui.py
